spectec/test/elab/neg/ctx-dec-redefined.spectec
;; Triggers ctx/ctx.ml:244 — declaring the same dec twice.

dec $f(nat) : nat
dec $f(nat) : nat
